2000-02-02  Jim Meyering  <meyering@lucent.com>

	* tests/touch/Makefile.am (TESTS): Add fifo.
	* tests/touch/fifo (fail): New file.

2000-02-01  Jim Meyering  <meyering@lucent.com>

	* src/touch.c (O_NDELAY): Define to 0 if not defined.
	(O_NONBLOCK): Define to O_NDELAY if not defined.
	(touch): Open with O_NONBLOCK, so one can touch a fifo without hanging.
	Reported by Eric G. Miller via Michael Stone.

	* man/*.x: Change ." to .\".
	Reported by Andreas Schwab and Brendan O'Dea.

2000-01-31  Jim Meyering  <meyering@lucent.com>

	* man/Makefile.maint (ginstall_filter): Define.
	($(man_MANS)): Use it here so that the install.1 man page refers
	to `install', not `ginstall'.  Reported by Andreas Schwab.

2000-01-30  Jim Meyering  <meyering@lucent.com>

	* Version 4.0p.

	* configure.in: Move library-related tests into m4/lib-check.m4.

	* src/system.h (ST_NBLOCKS): Use st_size only for regular files and
	for directories.  From H. J. Lu.

	* src/dd.c (main): Exit with nonzero status if ftruncate fails.

2000-01-24  Jim Meyering  <meyering@lucent.com>

	* src/ln.c (usage): Describe behavior when LINK_NAME is omitted.
	From Michael Stone.

	* src/mv.c (main): Don't expect array index `n_files - 1' to evaluate
	to `-1' for unsigned int n_files == 0.  Doing so lead to a segfault on
	alpha.  From Michael Stone.

2000-01-23  Jim Meyering  <meyering@lucent.com>

	* configure.in (AM_FUNC_OBSTACK): Remove. (move to m4/.)
	Remove nearly all function checks (moved to m4/.)
	(AC_SUBST(DF_PROG)): Move this to m4/.
	(ftruncate test): Move into new file: m4/ftruncate.m4.
	(AC_HEADER_MAJOR, AC_HEADER_DIRENT): Move into m4/.
	Remove df-related tests.  i.e., move jm_LIST_MOUNTED_FILESYSTEMS,
	jm_FSTYPENAME, and jm_FILE_SYSTEM_USAGE) into m4/.

2000-01-22  Jim Meyering  <meyering@lucent.com>

	* configure.in: Move addext.c prerequisites from this file into m4/.
	(AC_CHECK_HEADERS): Move these checks into m4/.

2000-01-17  Paul Eggert  <eggert@twinsun.com>
